--- a/uitest/Tab/TabCon/CS_Calculator/CalculatorButton.xaml
+++ b/uitest/Tab/TabCon/CS_Calculator/CalculatorButton.xaml
@@ -11,7 +11,8 @@
 			Grid.Row="0" Grid.Column="1"
 			Height="Auto"
 			MinWidth="20"
-			Click="CalcBT_Click"	>
+			Click="CalcBT_Click"
+			>
 			<Button.Background>
 				<ImageBrush ImageSource="CalcIcon.png" Stretch="UniformToFill"/>
 			</Button.Background>
