--- a/uitest/Tab/TabCon/TabCon/Controls/CS_CalculatorControl.xaml
+++ b/uitest/Tab/TabCon/TabCon/Controls/CS_CalculatorControl.xaml
@@ -63,7 +63,7 @@
 			<ColumnDefinition Width="*" />
 			<ColumnDefinition Width="*" />
 			<ColumnDefinition Width="*" />
-			<ColumnDefinition Width="*" />
+			<ColumnDefinition MinWidth="70" Width="Auto" />
 		</Grid.ColumnDefinitions>
 		<Grid.RowDefinitions >
 			<RowDefinition Height="Auto"/>
@@ -80,22 +80,42 @@
 							Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="4">
 		</StackPanel>
 		<Label x:Name="CalcResult" 
-					Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="3"
-					VerticalAlignment="Top" HorizontalAlignment="Stretch"
-					FontSize="18"/>
-		<!--Content="{Binding CResult ,Mode=TwoWay}"-->
-		<!--<DataGrid Name="CalcMemo" 
+						Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="3"
+						VerticalAlignment="Top" HorizontalAlignment="Stretch"
+						MinWidth="150"
+						FontSize="18"/>
+			<!--
+						Content="{Binding CResult ,Mode=TwoWay}"-->
+			<DataGrid x:Name="CalcMemo" 
+							Grid.Row="0" Grid.Column="3"
+							HeadersVisibility="None"
+							AutoGenerateColumns="True"
+							ColumnWidth="SizeToCells"
+							 ScrollViewer.HorizontalScrollBarVisibility="Disabled"
+							HorizontalAlignment="Right" 
+							HorizontalContentAlignment="Stretch"
+							MaxHeight="60"
+							CanUserAddRows ="False"
+							>
+				<!--<DataGrid.Columns>
+					<DataGridTextColumn Width="20" Header="Operater" />
+				<DataGridTextColumn Width="SizeToCells" Header="Value"/>
+				</DataGrid.Columns>-->
+			</DataGrid>
+			<!--
+
+		DataGridTextColumn
+			  Width="SizeToHeader" / "*" / "2*" /"SizeToCells"
+			  Binding="{Binding}"
+			  Header="SizeToHeader" />
+
+									DataContext="{Binding BeforeVals ,Mode=TwoWay}"
+	AutoGenerateColumns="False"-->
+			<!--<ScrollViewer x:Name="CalcMemoScroll"
 						Grid.Row="0" Grid.Column="3" Grid.ColumnSpan="3"
-						Height="60" HorizontalAlignment="Right" >
-		</DataGrid>-->
-		<!--
-								DataContext="{Binding BeforeVals ,Mode=TwoWay}"
-AutoGenerateColumns="False"-->
-		<ScrollViewer x:Name="CalcMemoScroll"
-					Grid.Row="0" Grid.Column="3" Grid.ColumnSpan="3"
-								 Height="60" HorizontalAlignment="Right" >
-			<Label  x:Name="CalcMemo"	Content="" HorizontalAlignment="Stretch" />
-		</ScrollViewer>
+									 Height="60" HorizontalAlignment="Right" >
+				<Label  x:Name="CalcMemo"	Content="" HorizontalAlignment="Stretch" />
+			</ScrollViewer>-->
 
 		<StackPanel Orientation="Horizontal" HorizontalAlignment="Right"
 							Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="4">
