BackSpace時の桁落ち表示

--- a/uitest/Tab/TabCon/TabCon/Controls/CS_CalculatorControl.xaml
+++ b/uitest/Tab/TabCon/TabCon/Controls/CS_CalculatorControl.xaml
@@ -8,7 +8,8 @@
              mc:Ignorable="d" 
 			 FontSize="12"
 			 Height="Auto"
-			d:DesignWidth="300" 
+			 Width="Auto" 
+			 MinWidth="300"
 			 FocusManager.FocusedElement="{Binding ElementName=CalcProcess}"
 			 Unloaded="UserControl_Unloaded" 
 			PreviewKeyDown="UserControl_PreviewKeyDown"
@@ -58,12 +59,12 @@
 		</ControlTemplate>
 	</UserControl.Resources>
 
-	<Grid>
+	<Grid Margin="0,0,5,0">
 		<Grid.ColumnDefinitions>
-			<ColumnDefinition Width="*" />
-			<ColumnDefinition Width="*" />
-			<ColumnDefinition Width="*" />
-			<ColumnDefinition MinWidth="70" Width="Auto" />
+			<ColumnDefinition MinWidth="65" Width="*" />
+			<ColumnDefinition MinWidth="65" Width="*" />
+			<ColumnDefinition MinWidth="65" Width="*" />
+			<ColumnDefinition MinWidth="65"  Width="Auto" />
 		</Grid.ColumnDefinitions>
 		<Grid.RowDefinitions >
 			<RowDefinition Height="Auto"/>
@@ -75,50 +76,45 @@
 			<RowDefinition MinHeight="52"/>
 		</Grid.RowDefinitions>
 
-		<StackPanel Orientation="Horizontal"
+		<!--<StackPanel Orientation="Horizontal"
 							HorizontalAlignment="Stretch"  VerticalAlignment="Top"
-							Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="4">
-		</StackPanel>
-		<Label x:Name="CalcResult" 
-						Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="3"
-						VerticalAlignment="Top" HorizontalAlignment="Stretch"
-						MinWidth="150"
-						FontSize="18"/>
-			<!--
-						Content="{Binding CResult ,Mode=TwoWay}"-->
-			<DataGrid x:Name="CalcMemo" 
-							Grid.Row="0" Grid.Column="3"
-							HeadersVisibility="None"
-							AutoGenerateColumns="True"
-							ColumnWidth="SizeToCells"
-							 ScrollViewer.HorizontalScrollBarVisibility="Disabled"
-							HorizontalAlignment="Right" 
-							HorizontalContentAlignment="Stretch"
-							MaxHeight="60"
-							CanUserAddRows ="False"
-							>
-				<!--<DataGrid.Columns>
-					<DataGridTextColumn Width="20" Header="Operater" />
-				<DataGridTextColumn Width="SizeToCells" Header="Value"/>
-				</DataGrid.Columns>-->
-			</DataGrid>
-			<!--
-
-		DataGridTextColumn
-			  Width="SizeToHeader" / "*" / "2*" /"SizeToCells"
-			  Binding="{Binding}"
-			  Header="SizeToHeader" />
-
-									DataContext="{Binding BeforeVals ,Mode=TwoWay}"
-	AutoGenerateColumns="False"-->
-			<!--<ScrollViewer x:Name="CalcMemoScroll"
-						Grid.Row="0" Grid.Column="3" Grid.ColumnSpan="3"
-									 Height="60" HorizontalAlignment="Right" >
-				<Label  x:Name="CalcMemo"	Content="" HorizontalAlignment="Stretch" />
-			</ScrollViewer>-->
-
+							Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="4">-->
+			<Viewbox 
+					HorizontalAlignment="Left"
+					VerticalAlignment="Top" 
+					Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="3"
+					>
+				<Label x:Name="CalcResult" 
+								HorizontalAlignment="Stretch"
+								FontSize="18"/>
+					<!--
+							Content="{Binding CResult ,Mode=TwoWay}"-->
+			</Viewbox>
+			<Viewbox
+					Grid.Row="0" Grid.Column="3"
+					>
+				<DataGrid x:Name="CalcProgress" 
+									HeadersVisibility="None"
+									AutoGenerateColumns="True"
+									ColumnWidth="SizeToCells"
+									 ScrollViewer.HorizontalScrollBarVisibility="Disabled"
+									HorizontalAlignment="Stretch" 
+									MaxHeight="60"
+									CanUserAddRows ="False"
+									>
+				</DataGrid>
+				<!--
+					<ScrollViewer x:Name="CalcMemoScroll"
+								Grid.Row="0" Grid.Column="3" Grid.ColumnSpan="3"
+											 Height="60" HorizontalAlignment="Right" >
+						<Label  x:Name="CalcProgress"	Content="" HorizontalAlignment="Stretch" />
+				</ScrollViewer>-->
+		</Viewbox>
+		<!--</StackPanel>-->
 		<StackPanel Orientation="Horizontal" HorizontalAlignment="Right"
-							Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="4">
+							Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="4"
+							Margin="0,0,5,0"
+						>
 			<Label x:Name="CalcOperation" Content="" Margin="5,0,-5,0"/>
 			<TextBox x:Name="CalcProcess"
 							HorizontalAlignment="Stretch"
@@ -214,14 +210,12 @@
 		<Button x:Name="PlusBt" Content="+" 
 					Template="{StaticResource Calcbutton}"
 					Grid.Row="3" Grid.Column="3" Grid.RowSpan="2"
-					Height="106"
 					Click="PlusBt_Click"  />
 		<!--Command="{Binding PlusClick}"-->
 		<Button x:Name="EnterBt" Content="Enter"  FontSize="12"
 					Grid.Row="5" Grid.Column="3" Grid.RowSpan="2"
 					Template="{StaticResource Calcbutton}"
-					Height="106"
-				Click="EnterBt_Click"  />
+					Click="EnterBt_Click"  />
 		<!--Command="{Binding PlusClick}"-->
 
 	</Grid>
