--- a/uitest/Tab/TabCon/TabCon/Controls/CS_CalculatorControl.xaml
+++ b/uitest/Tab/TabCon/TabCon/Controls/CS_CalculatorControl.xaml
@@ -63,7 +63,7 @@
 			<ColumnDefinition MinWidth="65" Width="*" />
 			<ColumnDefinition MinWidth="65" Width="*" />
 			<ColumnDefinition MinWidth="65" Width="*" />
-			<ColumnDefinition MinWidth="65"  Width="Auto" />
+			<ColumnDefinition MinWidth="65"  Width="*" />
 		</Grid.ColumnDefinitions>
 		<Grid.RowDefinitions >
 			<RowDefinition Height="Auto"/>
@@ -109,10 +109,10 @@
 
 		<StackPanel Orientation="Horizontal" HorizontalAlignment="Right"
 							Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="4">
-			<Label x:Name="CalcOperation" Content="" Margin="5,0,5,0"/>
+			<Label x:Name="CalcOperation" Content="" Margin="10,0,5,0"/>
 			<TextBox x:Name="CalcProcess"
 							HorizontalAlignment="Stretch"
-							FontSize="18" MinWidth="270" IsReadOnly="True" 
+							FontSize="18" MinWidth="260" IsReadOnly="True" 
 							/>
 			<!--	 Text="{Binding CInput ,Mode=TwoWay}"	Content="{Binding process ,Mode=TwoWay}"-->
 		</StackPanel>
