--- a/uitest/Tab/TabCon/CS_Calculator/CS_CalculatorControl.xaml
+++ b/uitest/Tab/TabCon/CS_Calculator/CS_CalculatorControl.xaml
@@ -59,10 +59,10 @@
 
 	<Grid>
 		<Grid.ColumnDefinitions>
-			<ColumnDefinition Width="*" />
-			<ColumnDefinition Width="*" />
-			<ColumnDefinition Width="*" />
-			<ColumnDefinition Width="*" />
+			<ColumnDefinition MinWidth="65" Width="*" />
+			<ColumnDefinition MinWidth="65" Width="*" />
+			<ColumnDefinition MinWidth="65" Width="*" />
+			<ColumnDefinition MinWidth="65"  Width="*" />
 		</Grid.ColumnDefinitions>
 		<Grid.RowDefinitions >
 			<RowDefinition Height="Auto"/>
@@ -79,29 +79,34 @@
 							Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="4">
 		</StackPanel>
 		<Label x:Name="CalcResult" 
-					Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="3"
-					VerticalAlignment="Top" HorizontalAlignment="Stretch"
-					FontSize="18"/>
-		<!--Content="{Binding CResult ,Mode=TwoWay}"-->
-		<!--<DataGrid Name="CalcMemo" 
-						Grid.Row="0" Grid.Column="3" Grid.ColumnSpan="3"
-						Height="60" HorizontalAlignment="Right" >
-		</DataGrid>-->
+						Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="3"
+						VerticalAlignment="Top" HorizontalAlignment="Stretch"
+						MinWidth="150"
+						FontSize="18"/>
 		<!--
-								DataContext="{Binding BeforeVals ,Mode=TwoWay}"
-AutoGenerateColumns="False"-->
-		<ScrollViewer x:Name="CalcMemoScroll"
-					Grid.Row="0" Grid.Column="3" Grid.ColumnSpan="3"
-								 Height="60" HorizontalAlignment="Right" >
-			<Label  x:Name="CalcMemo"	Content="" HorizontalAlignment="Stretch" />
-		</ScrollViewer>
+						Content="{Binding CResult ,Mode=TwoWay}"-->
+		<DataGrid x:Name="CalcProgress" 
+							Grid.Row="0" Grid.Column="3"
+							HeadersVisibility="None"
+							AutoGenerateColumns="True"
+							ColumnWidth="SizeToCells"
+							 ScrollViewer.HorizontalScrollBarVisibility="Disabled"
+							HorizontalAlignment="Right" 
+							HorizontalContentAlignment="Stretch"
+							MaxHeight="60"
+							CanUserAddRows ="False" 
+							CanUserReorderColumns="True"
+							SelectedCellsChanged="CalcProgress_SelectedCellsChanged" 
+							CellEditEnding="CalcProgress_CellEditEnding" 
+							>
+		</DataGrid>
 
 		<StackPanel Orientation="Horizontal" HorizontalAlignment="Right"
 							Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="4">
-			<Label x:Name="CalcOperation" Content="" Margin="5,0,-5,0"/>
+			<Label x:Name="CalcOperation" Content="" Margin="10,0,5,0"/>
 			<TextBox x:Name="CalcProcess"
 							HorizontalAlignment="Stretch"
-							FontSize="18" MinWidth="270" IsReadOnly="True" 
+							FontSize="18" MinWidth="260" IsReadOnly="True" 
 							/>
 			<!--	 Text="{Binding CInput ,Mode=TwoWay}"	Content="{Binding process ,Mode=TwoWay}"-->
 		</StackPanel>
