--- a/uitest/Tab/TabCon/TabCon/Views/X_1_3.xaml
+++ b/uitest/Tab/TabCon/TabCon/Views/X_1_3.xaml
@@ -1,4 +1,5 @@
-﻿<Page xmlns:igWPF="http://schemas.infragistics.com/xaml/wpf"  x:Class="TabCon.Views.X_1_3"
+﻿<Page  x:Class="TabCon.Views.X_1_3"
+xmlns:igWPF="http://schemas.infragistics.com/xaml/wpf" 
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
