--- a/uitest/Tab/TabCon/TabCon/Views/ParrtsTestView.xaml
+++ b/uitest/Tab/TabCon/TabCon/Views/ParrtsTestView.xaml
@@ -1,10 +1,11 @@
-﻿<Page xmlns:Controls="clr-namespace:TabCon.Controls"  
-	x:Class="TabCon.Views.ParrtsTestView"
+﻿<Page xmlns:ig="http://schemas.infragistics.com/xaml"  x:Class="TabCon.Views.ParrtsTestView"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:TabCon.Views"
+	  xmlns:valueeditors="clr-namespace:Microsoft.Expression.Utility.ValueEditors;assembly=Microsoft.Expression.Utility"
+	  xmlns:coloreditor="clr-namespace:Microsoft.Expression.Utility.ValueEditors.ColorEditor;assembly=Microsoft.Expression.Utility"
 	  xmlns:cs_calculator="clr-namespace:CS_Calculator;assembly=CS_Calculator"
 	  mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800"
@@ -15,10 +16,12 @@
 			<ColumnDefinition Width="Auto" />
 			<ColumnDefinition Width="Auto" />
 			<ColumnDefinition Width="Auto" />
-			<ColumnDefinition Width="*" />
+			<ColumnDefinition Width="Auto" />
 			<ColumnDefinition Width="*" />
 		</Grid.ColumnDefinitions>
 		<Grid.RowDefinitions >
+			<RowDefinition Height="Auto"/>
+			<RowDefinition Height="Auto"/>
 			<RowDefinition Height="Auto"/>
 			<RowDefinition Height="Auto"/>
 			<RowDefinition Height="Auto"/>
@@ -80,13 +83,13 @@
 						Grid.Row="3" Grid.Column="0"
 							Margin="5,5,5,5" VerticalAlignment="Center" Height="26"  
 							/>
-		<StackPanel Orientation="Horizontal"
-			HorizontalAlignment="Right"
-			Grid.Row="3" Grid.Column="1" Grid.ColumnSpan="2" >
-			<Label  Content="閾値" 
+		<Label  Content="閾値" 
 					HorizontalAlignment="Right"
-							Margin="0,5,0,5" VerticalAlignment="Center" Height="26" Width="34"  
-							/>
+					Grid.Row="3" Grid.Column="1"
+						Margin="0,5,0,5" VerticalAlignment="Center" Height="26" Width="34"  
+						/>
+		<StackPanel Orientation="Horizontal"
+			Grid.Row="3" Grid.Column="2" Grid.ColumnSpan="3" >
 			<TextBox 	x:Name="ColorSampleLimit" 
 						Grid.Row="3" Grid.Column="2"
 						Text="128" 
@@ -100,16 +103,6 @@
 							Margin="0,5,0,5" VerticalAlignment="Center" 
 							/>
 		</StackPanel>
-		<Label  Content="TextBox" 
-					HorizontalAlignment="Right"
-					Grid.Row="3" Grid.Column="3"
-					Margin="0,5,0,5" VerticalAlignment="Center" Height="26" Width="50"  
-							/>
-		<TextBox 	x:Name="ColorSampleTB" 
-						Grid.Row="3" Grid.Column="4"
-						Text="#999999" 
-						Margin="5,0,5,9" VerticalAlignment="Bottom" Height="18" 
-						/>
 		<Label  Content="背景" 
 					HorizontalAlignment="Right"
 					Grid.Row="4" Grid.Column="1"
@@ -120,18 +113,29 @@
 						Text="#999999" 
 						Margin="0,0,5,9" VerticalAlignment="Bottom" TextChanged="ColorSampleBackground_TextChanged" 
 						/>
-		<!--<ComboBox 	x:Name="ColorSampleBackground" 
-						Grid.Row="4" Grid.Column="2" Margin="5,0,10,0">
-		</ComboBox>-->
-
-		<Label  Content="Label" 
+		<ig:XamColorPicker 	x:Name="xamColorPicker" 
+				Grid.Row="5" Grid.Column="2"  Margin="0,10,0,10"
+				ShowAdvancedEditorButton="True"
+                ShowDerivedColorPalettes="True" SelectedColorChanged="XamColorPicker_SelectedColorChanged"
+				/>
+		<Label  Content="TextBox" 
 					HorizontalAlignment="Right"
 					Grid.Row="4" Grid.Column="3"
+					Margin="0,5,0,5" VerticalAlignment="Center" Height="26" Width="50"  
+							/>
+		<TextBox 	x:Name="ColorSampleTB" 
+						Grid.Row="4" Grid.Column="4"
+						Text="#999999" 
+						Margin="5,0,5,9" VerticalAlignment="Bottom" Height="18" 
+						/>
+		<Label  Content="Label" 
+					HorizontalAlignment="Right"
+					Grid.Row="5" Grid.Column="3"
 					Margin="0,5,5,5" VerticalAlignment="Center" Height="26" Width="38"  
 							/>
 		<Label  x:Name="ColorSampleLavel" 
 						Content="#FFFFFF" 
-						Grid.Row="4" Grid.Column="4"
+						Grid.Row="5" Grid.Column="4"
 						Margin="5,5,5,5" VerticalAlignment="Center" 
 						Background="#FF000000" Foreground="White" Height="26"  
 							/>
