スケジュール；タブ非表示

--- a/uitest/Tab/TabCon/TabCon/Views/X_1_3.xaml
+++ b/uitest/Tab/TabCon/TabCon/Views/X_1_3.xaml
@@ -36,7 +36,7 @@
 									Grid.Row="1" Grid.Column="0"
 									ShowCalendarCloseButton="False" 
 									ShowCalendarOverlayButton="False"
-									CalendarDisplayMode="Separate"
+									CalendarDisplayMode="Merged"
 									DataManager="{Binding dataManager}" 
 									/>
 		<!--
