一月分のカレンダ表示

--- a/uitest/Tab/TabCon/TabCon/Views/X_1_3.xaml
+++ b/uitest/Tab/TabCon/TabCon/Views/X_1_3.xaml
@@ -37,7 +37,8 @@
 									ShowCalendarCloseButton="False" 
 									ShowCalendarOverlayButton="False"
 									CalendarDisplayMode="Merged"
-									DataManager="{Binding dataManager}" 
+									WorkingDaysSource="AllResourcesInGroups" 
+									DataManager="{Binding dataManager}"
 									/>
 		<!--
 		ActivityBase
