--- a/uitest/Tab/TabCon/TabCon/Views/X_1_3.xaml
+++ b/uitest/Tab/TabCon/TabCon/Views/X_1_3.xaml
@@ -34,23 +34,27 @@
 				>
 		</Grid>-->
 
-		<!--　	一日	<ig:XamDayView x:Name="MyCalendar"
-									Grid.Row="1" Grid.Column="0"
-									DataManager="{Binding dataManager}"
-									/> 
-		一日横向き		<ig:XamScheduleView Grid.Row="1" Grid.Column="0"
-									DataManager="{Binding dataManager}"
-									/>
-									
-									なら問題無し
-		-->
-		<ig:XamMonthView Grid.Row="1" Grid.Column="0"
-									DataManager="{Binding dataManager}"
-									/>
-		<!--<ig:XamMonthView x:Name="MyCalendar"
-									Grid.Row="1" Grid.Column="0"
-									DataManager="{Binding dataManager}"
+		<!--　	一日	ig:XamDayView
+								XamOutlookCalendarView
+		一日横向き		ig:XamScheduleView
+		週表示　WeekDisplayMode="Week"
+
+									なら問題無し		-->
+		<!--<StackPanel Grid.Row="1" Grid.Column="0">
+				<ig:XamMonthView 
+				DataManager="{Binding dataManager}"
+				/>
+		</StackPanel>-->
+		<!--週表示
+		<ig:XamDayView x:Name="MyCalendar"
+							Grid.Row="1" Grid.Column="0"
+									DataManager="{Binding dataManager}" WeekDisplayMode="Week"
 									/>-->
+		<ig:XamMonthView x:Name="MyCalendar"
+							Grid.Row="1" Grid.Column="0"
+									DataManager="{Binding dataManager}"
+									/>
+
 		<!--<ig:XamScheduleDataManager x:Name="dataManager" 
              DataConnector="{Binding dataConnector}">
 			<ig:XamScheduleDataManager.CalendarGroups>
