--- a/uitest/Tab/TabCon/TabCon/Views/X_1_4.xaml
+++ b/uitest/Tab/TabCon/TabCon/Views/X_1_4.xaml
@@ -25,14 +25,24 @@
 										Grid.Row="0" Grid.Column="0"/>
 		<Grid x:Name="MyCalendar"
 				Grid.Row="1" Grid.Column="0">
-			<DataGrid ItemsSource="{Binding events}" AutoGenerateColumns="False">
+			<DataGrid ItemsSource="{Binding events}" 
+							AutoGenerateColumns="False" 
+							IsReadOnly="True"
+							>
 				<DataGrid.Columns>
-					<DataGridTextColumn  Header="タイトル" Binding="{Binding event_title}"/>
-					<DataGridTextColumn  Header="開始日" Binding="{Binding event_date_start}"/>
-					<DataGridTextColumn  Header="開始時刻" Binding="{Binding event_time_start}"/>
-					<DataGridTextColumn  Header="終了日" Binding="{Binding event_date_end}"/>
-					<DataGridTextColumn  Header="終了時刻" Binding="{Binding event_time_end}"/>
+					<DataGridTextColumn  Header="開始日" Binding="{Binding event_date_start, StringFormat={}{0:yyyy/MM/dd}}" />
+					<DataGridTextColumn  Header="時刻" Binding="{Binding event_time_start}"/>
+					<DataGridTextColumn  Header="終了日" Binding="{Binding event_date_end, StringFormat={}{0:yyyy/MM/dd}}" />
+					<DataGridTextColumn  Header="時刻" Binding="{Binding event_time_end}"/>
 					<DataGridCheckBoxColumn Header="終日" Binding="{Binding event_is_daylong}"/>
+					<DataGridTextColumn  Header="タイトル" Binding="{Binding event_title}">
+						<DataGridTextColumn.ElementStyle>
+							<Style TargetType="{x:Type TextBlock}">
+								<Setter Property="Background" Value="{Binding event_bg_color}"/>
+								<Setter Property="Foreground" Value="{Binding event_font_color}"/>
+							</Style>
+						</DataGridTextColumn.ElementStyle>
+					</DataGridTextColumn>
 					<DataGridTextColumn Header="場所" Binding="{Binding event_place}"/>
 					<DataGridTextColumn Header="メモ" Binding="{Binding event_memo}"/>
 					<DataGridTextColumn Header="ステータス" Binding="{Binding event_status}"/>
